# ai_code_buddy

./: .cargo-audit.toml  .gitignore  .tarpaulin.toml  CHANGELOG.md  CONVENTIONAL_COMMITS.md  Cargo.toml  LICENSE  README.md  build-auto.sh  build.rs  bump_version.sh  commit.sh  format_demo.js  lcov.info  release.sh  tarpaulin-report.html  tarpaulin-report.json  tarpaulin.toml  test_code.rs  test_installation.sh  update_coverage.sh
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release-new.yml  release.yml  security.yml
assets/: README.md
coverage/: lcov.info  tarpaulin-report.html
src/: args.rs  code_analyzer.rs  git_analyzer.rs  lib.rs  main.rs  review.rs  security_analysis.rs  theme.rs  ui.rs  ui_simple.rs  ui_simple_backup.rs  version.rs
src/bevy_states/: app.rs
src/core/: ai_analyzer.rs  analysis.rs  credits.rs  git.rs  mod.rs  review.rs
src/events/: analysis.rs  app.rs  credits.rs  overview.rs  reports.rs
src/widget_states/: analysis.rs  credits.rs  overview.rs  reports.rs
src/widgets/: analysis.rs  credits.rs  overview.rs  reports.rs
test_files/: README.md
test_files/javascript/: owasp_vulnerabilities.js  performance_issues.js  security_vulnerabilities.js
test_files/python/: security_vulnerabilities.py
test_files/rust/: basic_example.rs  performance_issues.rs
tests/: test_ai_analyzer.rs  test_analysis.rs  test_analysis_progress_and_git_paths.rs  test_analysis_simple.rs  test_args.rs  test_cli_mode.rs  test_core_comprehensive.rs  test_core_fixed.rs  test_core_functions.rs  test_core_prints_full_matrix.rs  test_core_simple.rs  test_core_simple_new.rs  test_functional_coverage.rs  test_functional_coverage_clean.rs  test_git.rs  test_integration.rs  test_main.rs  test_main_cli.rs  test_main_comprehensive.rs  test_main_functions.rs  test_main_tui.rs  test_overview_widget_state.rs  test_reports_widget_state.rs  test_review.rs  test_theme.rs  test_widget_states.rs  test_widgets.rs  test_widgets_analysis.rs  test_widgets_comprehensive.rs  test_widgets_overview.rs
