[package]
name = "ai-code-buddy"
version = "0.1.0"
edition = "2021"
authors = ["Edgar H. Sanchez <esanchez@m2iab.com>"]
description = "An AI-powered code review tool that analyzes Git repositories and provides intelligent feedback"
readme = "README.md"
homepage = "https://github.com/edgarhsanchez/ai_buddy"
repository = "https://github.com/edgarhsanchez/ai_buddy"
license = "MIT"
keywords = ["ai", "code-review", "git", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
kalosm = { version = "0.4.0", features = ["language"] }
tokio = { version = "1.47.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
git2 = "0.19"
anyhow = "1.0"
regex = "1.0"